@@ -2167,6 +2167,41 @@ int mat_copyMakeBorder(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*ob
 }
 
 
+int mat_countNonZero(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
+{
+    cv::Mat image, dstimage;
+    cv::Mat *mat;
+    int result = 0;
+
+    if (objc != 2) {
+        Tcl_WrongNumArgs(interp, 1, objv, "matrix?");
+        return TCL_ERROR;
+    }
+
+    mat = (cv::Mat *) Opencv_FindHandle(cd, interp, OPENCV_MAT, objv[1]);
+    if (!mat) {
+        return TCL_ERROR;
+    }
+
+    image = *mat;
+
+    if (image.channels() != 1) {
+        Tcl_SetResult(interp, (char *) "countNonZero requires single-channel array", TCL_STATIC);
+        return TCL_ERROR;
+    }
+
+    try {
+        result = cv::countNonZero(image);
+    } catch (...) {
+        Tcl_SetResult(interp, (char *) "countNonZero failed", TCL_STATIC);
+        return TCL_ERROR;
+    }
+
+    Tcl_SetObjResult(interp, Tcl_NewIntObj (result));
+    return TCL_OK;
+}
+
+
 int mat_divide(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
 {
     double scale = 1.0;
